# contacts2csv

./: .gitignore  Dockerfile  README.md  clitool.py  csv2ical.py  pyproject.toml
app/: main.py
app/templates/: error.html  upload.html
templates/: upload.html
templates/partials/: error.html  success.html
